force-app/main/default/objects/Call_Log__c/fields/Associated_Script__c.field-meta.xml
<CustomField>
    <fullName>Associated_Script__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Script</label>
    <referenceTo>Call_Center_Scripts__c</referenceTo>
    <relationshipLabel>Call Logs</relationshipLabel>
    <relationshipName>Call_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>