force-app/main/default/objects/Call_Log__c/fields/Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Call_Status__c</fullName>
    <label>Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Actionable (No further action required)</fullName>
            </value>
            <value>
                <fullName>Escalation Needed</fullName>
            </value>
            <value>
                <fullName>Follow Up On Existing Case</fullName>
            </value>
            <value>
                <fullName>Follow Up On Existing FinReq</fullName>
            </value>
            <value>
                <fullName>Other (Not actionable)</fullName>
            </value>
            <value>
                <fullName>Transferring Call</fullName>
            </value>
            <value>
                <fullName>Unsupported Product</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>