force-app/main/default/objects/Call_Log__c/fields/Caller_ANI__c.field-meta.xml
<CustomField>
    <fullName>Caller_ANI__c</fullName>
    <label>Caller ANI</label>
    <length>200</length>
    <type>Text</type>
</CustomField>