force-app/main/default/objects/Call_Log__c/fields/Caller_Menu_Selections__c.field-meta.xml
<CustomField>
    <fullName>Caller_Menu_Selections__c</fullName>
    <label>Caller Menu Selections</label>
    <length>200</length>
    <type>Text</type>
</CustomField>