force-app/main/default/objects/Call_Log__c/fields/Caller_Need__c.field-meta.xml
<CustomField>
    <fullName>Caller_Need__c</fullName>
    <label>Caller Need</label>
    <length>200</length>
    <type>Text</type>
</CustomField>