force-app/main/default/objects/Call_Log__c/fields/Escalation_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Record_Type__c</fullName>
    <label>Escalation Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Escalation_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Client External Support</fullName>
            </value>
            <value>
                <fullName>Reservations Request</fullName>
            </value>
            <value>
                <fullName>Internal Support</fullName>
            </value>
            <value>
                <fullName>Parent Ticket (NOC)</fullName>
            </value>
            <value>
                <fullName>Billing Support</fullName>
            </value>
            <value>
                <fullName>Company Credit Hold</fullName>
            </value>
            <value>
                <fullName>Credit Request</fullName>
            </value>
            <value>
                <fullName>Payment Research Request</fullName>
            </value>
            <value>
                <fullName>Pricing Help Request</fullName>
            </value>
            <value>
                <fullName>Profile Request</fullName>
            </value>
            <value>
                <fullName>Rate Entry Request</fullName>
            </value>
            <value>
                <fullName>Request for Adjustment</fullName>
            </value>
            <value>
                <fullName>Revenue Assurance Audit Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>