force-app/main/default/objects/Call_Log__c/fields/Escalation_Type__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Type__c</fullName>
    <label>Escalation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>FinReq</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>