force-app/main/default/objects/Call_Log__c/fields/KB_Connector__c.field-meta.xml
<CustomField>
    <fullName>KB_Connector__c</fullName>
    <label>KB Connector</label>
    <type>Url</type>
</CustomField>