force-app/main/default/objects/Call_Log__c/fields/PGi_Company__c.field-meta.xml
<CustomField>
    <fullName>PGi_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Will be populated if provided from the DNIS/IVR,otherwise you can insert before escalating as needed.</inlineHelpText>
    <label>PGi Company</label>
    <referenceTo>PGi_Company__c</referenceTo>
    <relationshipLabel>Call Logs</relationshipLabel>
    <relationshipName>Call_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>