force-app/main/default/objects/Call_Log__c/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Case #</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Call Logs</relationshipLabel>
    <relationshipName>Call_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>