force-app/main/default/objects/Call_Log__c/fields/Related_FinReq__c.field-meta.xml
<CustomField>
    <fullName>Related_FinReq__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related FinReq #</label>
    <referenceTo>Financial_Request__c</referenceTo>
    <relationshipLabel>Call Logs</relationshipLabel>
    <relationshipName>Call_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>