force-app/main/default/objects/Call_Log__c/fields/Reporting_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Entity_Type__c</fullName>
    <label>Reporting Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platinum Reseller</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Platinum Direct Clients</fullName>
            </value>
            <value>
                <fullName>Direct Clients</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>