force-app/main/default/objects/Call_Log__c/fields/Transfer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Notes__c</fullName>
    <label>Transfer Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>