force-app/main/default/objects/Call_Log__c/validationRules/CallLog_CaseRelationshipNeeded.validationRule-meta.xml
<ValidationRule>
    <fullName>CallLog_CaseRelationshipNeeded</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Call_Status__c , &#39;Follow Up On Existing Case&#39;),
ISBLANK( Related_Case__c )
)</errorConditionFormula>
    <errorDisplayField>Related_Case__c</errorDisplayField>
    <errorMessage>Please populate the Case # that the incoming call is following up on.</errorMessage>
</ValidationRule>