force-app/main/default/objects/Call_Log__c/validationRules/CallLog_EscalationRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CallLog_EscalationRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL ( Call_Status__c , &#39;Escalation Needed&#39;),
ISPICKVAL ( Escalation_Type__c , &#39;&#39;) ||
ISPICKVAL ( Escalation_Record_Type__c  , &#39;&#39;)
)</errorConditionFormula>
    <errorDisplayField>Call_Status__c</errorDisplayField>
    <errorMessage>If Call Status = Escalation Needed then you must pick an Escalation Type and Record Type</errorMessage>
</ValidationRule>