force-app/main/default/objects/Call_Log__c/validationRules/CallLog_FinReqRelationshipNeeded.validationRule-meta.xml
<ValidationRule>
    <fullName>CallLog_FinReqRelationshipNeeded</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Call_Status__c , &#39;Follow Up On Existing FinReq&#39;),
ISBLANK(  Related_FinReq__c  )
)</errorConditionFormula>
    <errorDisplayField>Related_FinReq__c</errorDisplayField>
    <errorMessage>Please populate the FinReq # that the incoming call is following up on.</errorMessage>
</ValidationRule>