force-app/main/default/objects/Call_Log__c/validationRules/CallLog_Transfer_Notes_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CallLog_Transfer_Notes_Required</fullName>
    <active>true</active>
    <description>If the Call Status field equals &quot;Transferring Call&quot;, then the &quot;Transfer Notes&quot; field is required.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Call_Status__c, &quot;Transferring Call&quot;),
ISBLANK(Transfer_Notes__c) = TRUE
)</errorConditionFormula>
    <errorDisplayField>Transfer_Notes__c</errorDisplayField>
    <errorMessage>If the Call Status field equals &quot;Transferring Call&quot;, then the &quot;Transfer Notes&quot; field is required.</errorMessage>
</ValidationRule>