force-app/main/default/objects/Call_Log__c/listViews/All_Call_Logs_from_Today.listView-meta.xml
<ListView>
    <fullName>All_Call_Logs_from_Today</fullName>
    <columns>NAME</columns>
    <columns>Call_Status__c</columns>
    <columns>Related_Case__c</columns>
    <columns>Related_FinReq__c</columns>
    <columns>PGi_Client__c</columns>
    <columns>PGi_Company__c</columns>
    <columns>Caller_Langauge_Selection__c</columns>
    <columns>Caller_Menu_Selections__c</columns>
    <columns>Caller_Need__c</columns>
    <columns>Caller_Skill__c</columns>
    <columns>Caller_ANI__c</columns>
    <columns>Call_Notes__c</columns>
    <columns>Call_Script__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All Call Logs from Today</label>
    <language>en_US</language>
</ListView>